# pamm

./: CMakeLists.txt  INSTALLATION  README.md  availablemod.cpp  availablemod.h  helpdialog.cpp  helpdialog.h  installedmod.cpp  installedmod.h  main.cpp  mod.cpp  mod.h  modfilterwidget.cpp  modfilterwidget.h  modlistwidget.cpp  modlistwidget.h  modmanager.cpp  modmanager.h  pamm.cpp  pamm.h  pamm.kdev4  pamm_linux  pamm_mac  videoreviewdialog.cpp  videoreviewdialog.h
i18n/: CMakeLists.txt  de.qm  de.ts  fr.qm  fr.ts  nl.qm  nl.ts
locale/: de.ts  nl.ts
